v0.1.70; remove idensic-mobile-sdk-videoident; ktlint reformat